fix search box width on mobile

--- a/site/themes/meteor/source/style/sidebar.styl
+++ b/site/themes/meteor/source/style/sidebar.styl
@@ -34,5 +34,5 @@
   display none
   margin-bottom 20px
   .search-box
-    width 240px
+    width 200px
     margin-bottom 20px
